# cufino_ws_h1_2

./: CMakeLists.txt  Doxyfile  README.md
h1_2_demo/: CMakeLists.txt  README.md
h1_2_demo/config/: .routine.txt.swp  routine.txt
h1_2_demo/src/: whole_body_motion.cpp
h1_2_motion/: CMakeLists.txt  README.md
h1_2_motion/html/: SerialPort_8h_source.html  Subscription_8h_source.html  arm__motion_8cpp__incl.md5  arm__motion_8h__dep__incl.map  classArm__motion.html  classHand__motion__inherit__graph.md5  classLocomotion.html  classLocomotion__inherit__graph.map  classSerialPort.html  classWhole__body__motion__coll__graph.map  classinspire_1_1InspireHand.html  classunitree_1_1robot_1_1PublisherBase__coll__graph.map  classunitree_1_1robot_1_1SubscriptionBase.html  dir_000003_000001.html  dir_32ec49ac628dbec07b034ec796aaf102.html  dir_89b5784a03b168a6071f6440abe6bcf1_dep.map  dir_89e0a3ed904391f1546e369ba406be55_dep.md5  dir_de38c387cfe687a5a78bbe65f3eba098_dep.md5  dir_ffc9ca92d758880d1e3dac5aa9134fda_dep.map  files.html  functions.html  hand__motion_8cpp.html  hand__motion_8cpp__incl.map  hand__motion_8h__dep__incl.md5  hand__motion_8h__incl.map  inherit_graph_0.map  inherit_graph_0.md5  inspire_8h_source.html  locomotion_8cpp__incl.md5  locomotion_8h__dep__incl.map  whole__body__motion_8cpp__incl.map
h1_2_motion/html/search/: all_0.js  all_8.js  all_a.js  all_c.js  classes_0.js  classes_2.js  classes_3.js
h1_2_motion/src/: arm_motion.cpp  hand_motion.cpp
h1_2_pushing/: CMakeLists.txt  README.md
h1_2_pushing/output/: positions.csv  torques.csv  wrench.csv
h1_2_pushing/output/empty_chair/: positions.csv  torques.csv  wrench.csv
h1_2_pushing/src/: h1_2_kdl.cpp  pushing_wheelchair.cpp
h1_2_test/: CMakeLists.txt
h1_2_test/config/: .routine.txt.swp
h1_2_test/include/: arm_motion.h  hand_motion.h  locomotion.h
h1_2_test/src/: arm_motion.cpp  hand_motion.cpp  loco_arm_motion.cpp  locomotion.cpp  whole_body_motion.cpp
html/: Publisher_8h_source.html  SerialPort_8h_source.html  Subscription_8h_source.html  annotated.html  arm__motion_8cpp.html  arm__motion_8cpp__incl.map  arm__motion_8cpp__incl.md5  arm__motion_8h.html  arm__motion_8h__dep__incl.map  arm__motion_8h__dep__incl.md5  arm__motion_8h__incl.map  arm__motion_8h__incl.md5  arm__motion_8h_source.html  classArm__motion-members.html  classArm__motion.html  classArm__motion__inherit__graph.map  classArm__motion__inherit__graph.md5  classHand__motion-members.html  classHand__motion.html  classHand__motion__inherit__graph.map  classInspireRunner-members.html  classInspireRunner.html  classLocomotion-members.html  classLocomotion.html  classSerialPort-members.html  classSerialPort.html  classWhole__body__motion-members.html  classWhole__body__motion.html  classWhole__body__motion__inherit__graph.md5  classinspire_1_1InspireHand-members.html  classinspire_1_1InspireHand.html  classunitree_1_1robot_1_1PublisherBase-members.html  classunitree_1_1robot_1_1PublisherBase.html  classunitree_1_1robot_1_1PublisherBase__inherit__graph.md5  classunitree_1_1robot_1_1RealTimePublisher.html  classunitree_1_1robot_1_1SubscriptionBase-members.html  classunitree_1_1robot_1_1SubscriptionBase.html  dir_000001_000002.html  dir_000001_000004.html  dir_638f88779eaf3c11643facd7695bd2f9.html  (+42 more)
html/search/: all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  classes_1.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
include/: arm_motion.h  h1_2_kdl.h  hand_motion.h
src/: run_drivers.sh
src/h1_2_demo/: CMakeLists.txt  README.md
src/h1_2_demo/fabio_output/: force_ee.csv  gravity_torques.csv  left_ee_cmd.csv  left_twist_ee_cmd.csv  plot_data.m  right_ee_actual.csv  right_twist_ee_cmd.csv
src/h1_2_demo/output/: est_torques.csv  force_ee.csv  gravity_torques.csv  joint_positions_actual.csv  joint_positions_cmd.csv  left_ee_actual.csv  (+6 more)
src/h1_2_motion/: CMakeLists.txt  Doxyfile
src/h1_2_motion/html/: Publisher_8h_source.html  SerialPort_8h_source.html  Subscription_8h_source.html  annotated.html  arm__motion_8cpp.html  arm__motion_8cpp__incl.map  arm__motion_8cpp__incl.md5  arm__motion_8h.html  arm__motion_8h__dep__incl.map  arm__motion_8h__dep__incl.md5  arm__motion_8h__incl.map  arm__motion_8h__incl.md5  arm__motion_8h_source.html  classArm__motion-members.html  classArm__motion.html  classH1__2__kdl-members.html  classH1__2__kdl.html  classHand__motion-members.html  classHand__motion.html  classInspireRunner.html  classLocomotion.html  classLocomotion__inherit__graph.md5  classWhole__body__motion-members.html  classWhole__body__motion.html  classes.html  classunitree_1_1robot_1_1RealTimePublisher-members.html  dir_000001_000002.html  dir_000004_000002.html  dir_638f88779eaf3c11643facd7695bd2f9_dep.md5  dir_64a38d4eef0171faf06a7d4341a69d6c.html  dir_64a38d4eef0171faf06a7d4341a69d6c_dep.map  dir_64a38d4eef0171faf06a7d4341a69d6c_dep.md5  dir_7b19a3a5759e728d0f751debf3a5af49.html  dir_89e0a3ed904391f1546e369ba406be55.html  dir_89e0a3ed904391f1546e369ba406be55_dep.map  dir_89e0a3ed904391f1546e369ba406be55_dep.md5  dir_b8b358480bab9b8452de4d5e2bccd959.html  dir_ffc9ca92d758880d1e3dac5aa9134fda.html  dir_ffc9ca92d758880d1e3dac5aa9134fda_dep.map  dir_ffc9ca92d758880d1e3dac5aa9134fda_dep.md5  (+44 more)
src/h1_2_motion/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
src/h1_2_motion/include/: arm_motion.h  h1_2_kdl.h  hand_motion.h  locomotion.h
src/h1_2_motion/src/: arm_motion.cpp  h1_2_kdl.cpp  hand_motion.cpp  kdl_test.cpp  locomotion.cpp
src/h1_2_pushing/: CMakeLists.txt
(+8 files in other folders)
